--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy==1.24.4
+python==3.9.6
+numpy==1.25.2
 scikit-learn==1.2.1
 opencv-python==4.8.0.74
 scipy==1.10.0
-matplotlib==3.7.4
+matplotlib==3.8.0
